examples/jwt-client/cloudant-client.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cl-client-ingress
  namespace: trusted-identity
spec:
  rules:
    # provide the actual Ingress for `host` value:
# - host: my-ti-cluster.eu-de.containers.appdomain.cloud
  - host:
    http:
      paths:
      - backend:
          serviceName: cl-client-service
          servicePort: 8000
        path: /jwt-client
